[package]
name = "bee_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.143", features = ["derive"] }
tungstenite = "0.19.0"
anyhow = "1"
clap = "3"

[lib]
name = "bee_api"
path = "src/lib.rs"

[[bin]]
name = "bee_api"
path = "src/main.rs"